* Filemanager: Fix anonymous list UI search, error from missing filter drawer and logo sized too small

--- a/filemanager/templates/default/sharing.css
+++ b/filemanager/templates/default/sharing.css
@@ -64,6 +64,8 @@ div.et2_nextmatch thead {
 
 #filemanager-index_filemanager-index-app-toolbar > et2-image {
     padding: 0 1em;
+	flex-grow: 1;
+	min-width: 3em;
 }
 
 #filemanager-index_nm_reload et2-image {
